--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,6 @@
 <resources>
     <string name="app_name">DemoThree</string>
 
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
-
-
     <!-- Strings for home activity -->
     <string name="skip_login_button_text">Skip for testing</string>
     <string name="next_game_day_text">08</string>
@@ -30,5 +16,17 @@
     <string name="compose_button_text">Compose</string>
     <string name="compose_done_button_text">Done</string>
     <string name="compose_back_button_text">Back</string>
+
+    <!-- Strings for login activity -->
+    <string name="signin_password_text">Password</string>
+    <string name="signin_email_text">Email address</string>
+    <string name="register_email_text">Email address</string>
+    <string name="register_password_text">Password</string>
+    <string name="test_server_button_text">Test Server</string>
+
+
+    <!-- Server test strings -->
+    <string name="message_to_server_text">MESSAGE TO SERVER</string>
+    <string name="message_from_server_text">MESSAGE FROM SERVER</string>
 
 </resources>
