Notices now updates to new fragments rather than textview. About to integrate server and client databases

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,7 @@
     <string name="send_button_text">Send</string>
     <string name="emailtvtext">email</string>
     <string name="passwordTVtext">password</string>
+    <string name="notice_fragment_client_name">NAME</string>
+    <string name="notice_fragment_date">DATE</string>
 
 </resources>
