committing as AS is frozen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,5 +47,6 @@
     <string name="add_responsibility">Add Responsibility</string>
     <string name="back">Back</string>
     <string name="s_amp_c"><![CDATA[S&C]]></string>
+    <string name="select_string">Select string</string>
 
 </resources>
