--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,5 +48,6 @@
     <string name="back">Back</string>
     <string name="s_amp_c"><![CDATA[S&C]]></string>
     <string name="select_string">Select string</string>
+    <string name="analyse_items">items</string>
 
 </resources>
