--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,5 +49,6 @@
     <string name="s_amp_c"><![CDATA[S&C]]></string>
     <string name="select_string">Select string</string>
     <string name="analyse_items">items</string>
+    <string name="toast_invalid_message">Invalid email or password</string>
 
 </resources>
