Found multiple classes had never been added to git... committed ready for submission

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DemoThree</string>
+    <string name="app_name">RUMMA</string>
 
     <!-- Strings for home activity -->
     <string name="skip_login_button_text">Skip for testing</string>
